tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::conditionals::p01_parses_if_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - If:
        condition:
          Bool: true
        then_branch:
          - Let:
              name: x
              kind: MutableStatic
              value:
                Number: 1
        else_branch: ~
  modules: []
  globals: []
  entry: ~
stmts:
  - If:
      condition:
        Bool: true
      then_branch:
        - Let:
            name: x
            kind: MutableStatic
            value:
              Number: 1
      else_branch: ~
