tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::functions::p02_parses_function_with_params_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: add
        params:
          - a
          - b
          - c
        body:
          - Let:
              name: x
              kind: MutableStatic
              value:
                Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: add
      params:
        - a
        - b
        - c
      body:
        - Let:
            name: x
            kind: MutableStatic
            value:
              Number: 1
