tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::functions::p03_parses_function_with_return_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: foo
        params: []
        body:
          - Return:
              value:
                Number: 42
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: foo
      params: []
      body:
        - Return:
            value:
              Number: 42
