tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::functions::p04_parses_nested_function_calls_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - Function:
        name: f
        params: []
        body:
          - Return:
              value:
                Call:
                  callee:
                    Var: g
                  args:
                    - Call:
                        callee:
                          Var: h
                        args:
                          - Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - Function:
      name: f
      params: []
      body:
        - Return:
            value:
              Call:
                callee:
                  Var: g
                args:
                  - Call:
                      callee:
                        Var: h
                      args:
                        - Number: 1
