tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::grouping::p02_parses_nested_grouping_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Number: 123
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Number: 123
