tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::grouping::p03_parses_grouping_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Binary:
            left:
              Number: 1
            op: Add
            right:
              Number: 2
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Binary:
          left:
            Number: 1
          op: Add
          right:
            Number: 2
