tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::indexing::p01_parses_array_index_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Index:
            target:
              Var: a
            index:
              Number: 0
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Index:
          target:
            Var: a
          index:
            Number: 0
