tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::indexing::p02_parses_nested_index_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Index:
            target:
              Index:
                target:
                  Var: a
                index:
                  Number: 0
            index:
              Number: 1
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Index:
          target:
            Index:
              target:
                Var: a
              index:
                Number: 0
          index:
            Number: 1
