tests/snapshots/ast/r#mod__common__assertion__parser::ast_transformation::indexing::p03_parses_index_expression_1.snap
---
source: tests/00_common/assertion.rs
expression: "&ast"
---
program:
  stmts:
    - ExprStmt:
        expr:
          Index:
            target:
              Var: a
            index:
              Binary:
                left:
                  Number: 1
                op: Add
                right:
                  Number: 2
  modules: []
  globals: []
  entry: ~
stmts:
  - ExprStmt:
      expr:
        Index:
          target:
            Var: a
          index:
            Binary:
              left:
                Number: 1
              op: Add
              right:
                Number: 2
